# mfsync

./: .gitignore  CMakeLists.txt  README.md  default.nix  derivation.nix  flake.nix
.github/workflows/: cmake.yml  ctest.yml
cmake/: FindCryptoPP.cmake
include/mfsync/: client_session.h  crypto.h  deque.h  file_fetcher.h  file_handler.h  file_information.h  file_receive_handler.h  file_sender.h  help_messages.h  misc.h  ofstream_wrapper.h  progress_handler.h  protocol.h  server.h  server_session.h
src/: client_session.cpp  crypto.cpp  deque.cpp  file_fetcher.cpp  file_handler.cpp  file_information.cpp  file_receive_handler.cpp  file_sender.cpp  main.cpp  ofstream_wrapper.cpp  progress_handler.cpp  protocol.cpp  server.cpp  server_session.cpp
test/e2e/: README.md  docker-compose.yaml
test/e2e/mfsync_share/: Dockerfile
test/unit/: CMakeLists.txt  test.cpp  test_crypto.cpp
